[tool.poetry]
name = "transcriber"
version = "0.1.0"
description = "A API to transcribe YouTube videos to text."
authors = ["Pery Lemke <pery.lemke@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.0"}
pytube = "^15.0.0"
youtube-transcript-api = "^0.6.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.6.4"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
